replace theme css and html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <!-- custom: -->
-  <link href="https://fonts.googleapis.com/css?family=Fira+Code|Fira+Sans|Roboto&display=swap" rel="stylesheet">
+
+  <link href="https://fonts.googleapis.com/css?family=Fira+Code|Fira+Sans|Roboto|Merriweather&display=swap"
+    rel="stylesheet">
+
+  <!-- highlight.js -->
+  <!-- <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/atom-one-light.min.css"> -->
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/styles/tomorrow.min.css">
+  <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/highlight.min.js"></script>
+  <!-- custom languages -->
+  <script charset="UTF-8" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/languages/elixir.min.js">
+  </script>
+  <script charset="UTF-8" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/languages/prolog.min.js">
+  </script>
+  <script charset="UTF-8" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/languages/erlang.min.js">
+  </script>
+  <script charset="UTF-8" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.18.1/languages/clojure.min.js">
+  </script>
+
   <!-- end custom -->
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   {%- feed_meta -%}
