--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -95,7 +95,6 @@ $green-shadow: rgba(200, 255, 128, 0.3);
 pre {
   flex: auto;
 
-  font-family: 'Fira Code', monospace;
   background-color: $background-color;
   border: 1px solid $gray;
   // box-shadow: 4px 4px 2px $gray-shadow;
@@ -103,6 +102,8 @@ pre {
 
 code.hljs {
   background-color: $background-color;
+
+  font-family: 'Fira Code' !important;
 }
 
 img {
