--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -2,20 +2,23 @@
 
 // Define defaults for each variable.
 
-$base-font-family: -apple-system,
-BlinkMacSystemFont,
-"Segoe UI",
-Roboto,
-Helvetica,
-Arial,
-sans-serif,
-"Apple Color Emoji",
-"Segoe UI Emoji",
-"Segoe UI Symbol" !default;
-$base-font-size: 16px !default;
+$base-font-family: 'PT Sans',
+'-apple-system',
+sans;
+// -apple-system,
+// BlinkMacSystemFont,
+// "Segoe UI",
+// Roboto,
+// Helvetica,
+// Arial,
+// sans-serif,
+// "Apple Color Emoji",
+// "Segoe UI Emoji",
+// "Segoe UI Symbol" !default;
+$base-font-size: 18px !default;
 $base-font-weight: 400 !default;
 $small-font-size: $base-font-size * 0.875 !default;
-$base-line-height: 1.5 !default;
+$base-line-height: 1.7 !default;
 
 $spacing-unit: 30px !default;
 
@@ -100,6 +103,14 @@ pre {
   // box-shadow: 4px 4px 2px $gray-shadow;
 }
 
+// inline code
+code {
+  background-color: rgba(0, 0, 0, 0.1);
+  padding: 0.125rem 0.5rem;
+  border-radius: 5px;
+}
+
+// highlighted code blocks
 code.hljs {
   background-color: $background-color;
 
@@ -109,4 +120,11 @@ code.hljs {
 img {
   max-width: 100%;
   vertical-align: middle;
+}
+
+// see: https://hankchizljaw.com/wrote/creating-a-full-bleed-css-utility/
+.full--bleed {
+  width: 100vw;
+  margin-left: 50%;
+  transform: translateX(-50%);
 }
