no ugly pics in modularity post

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,6 +32,9 @@
   </div>
 
   <script>
+    hljs.configure({
+      languages: ['Elixir', 'Rust', 'Bash', 'OCaml', 'ReasonML', 'Plaintext']
+    });
     hljs.initHighlightingOnLoad();
   </script>
 
