--- a/peak_lambda/templates/blog-page.html
+++ b/peak_lambda/templates/blog-page.html
@@ -4,8 +4,8 @@
 
 <div class="wrapper">
   <div>
-    <h1 class="title">{{ page.title }}</h1>
-    <h2 class="subtitle">{{ page.date }}</h2>
+    <h1 class="page-title">{{ page.title }}</h1>
+    <h2 class="page-subtitle">{{ page.date }}</h2>
   </div>
 
 
