--- a/peak_lambda/templates/base.html
+++ b/peak_lambda/templates/base.html
@@ -8,13 +8,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/main.css">
 </head>
 
 <body>
   <section class="section">
     <div class="container">
-      {% block content %} {% endblock %}
+      <div class="content">
+        {% block content %} {% endblock %}
+      </div>
     </div>
   </section>
 </body>
